# Week-2_Project

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: eda.ipynb
reports/: summary.md
scripts/: run_day1_load.py  run_day2_clean.py  run_day3_build_analytics.py  run_etl.py
src/data_workflow/: config.py  etl.py  io.py  joins.py  quality.py  transformers.py  utils.py  viz.py
